--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -44,7 +44,8 @@
         android:id="@+id/about_mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:autoLink="email" />
 
     <TextView
         android:id="@+id/about_text"
