--- a/app/src/main/res/layout/activity_tag_search.xml
+++ b/app/src/main/res/layout/activity_tag_search.xml
@@ -104,7 +104,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minWidth="30dp"
-                    android:text="前" />
+                    android:text="前页" />
 
                 <Spinner
                     android:id="@+id/spinner"
@@ -116,7 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minWidth="30dp"
-                    android:text="后" />
+                    android:text="后页" />
 
                 <View
                     android:layout_width="0dp"
