--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
-        android:textColor="@android:color/black" />
+        android:lines="3" />
 
     <Button
         android:id="@+id/check_update"
@@ -51,5 +51,7 @@
         android:id="@+id/about_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:fadeScrollbars="false"
+        android:scrollbars="vertical" />
 </LinearLayout>
