【】设置背景图

--- a/app/src/main/res/layout/activity_option.xml
+++ b/app/src/main/res/layout/activity_option.xml
@@ -112,6 +112,24 @@
             android:max="30" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp">
+
+        <TextView
+            android:id="@+id/bg_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="背景图:" />
+
+        <Spinner
+            android:id="@+id/bg_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
