--- a/app/src/main/res/layout-sw600dp/activity_study.xml
+++ b/app/src/main/res/layout-sw600dp/activity_study.xml
@@ -6,10 +6,10 @@
     android:orientation="vertical">
 
     <ScrollView
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/repeat_bg"
         android:fadeScrollbars="false"
         android:verticalScrollbarPosition="left">
 
