--- a/app/src/main/res/layout/activity_option.xml
+++ b/app/src/main/res/layout/activity_option.xml
@@ -125,7 +125,7 @@
 
         <Spinner
             android:id="@+id/bg_spinner"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
     </LinearLayout>
