--- a/app/src/main/res/menu/studyresult_menu.xml
+++ b/app/src/main/res/menu/studyresult_menu.xml
@@ -2,11 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/copy_url"
+        android:title="复制当前页链接"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/open_it"
+        android:title="用系统浏览器打开"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/set_font_ratio"
         android:title="设置缩放"
         app:showAsAction="never" />
     <item
         android:id="@+id/set_clear_caches"
-        android:title="清除WebView缓存"
+        android:title="清WebView缓存"
         app:showAsAction="never" />
 </menu>
