--- a/app/src/main/res/layout/activity_study_result.xml
+++ b/app/src/main/res/layout/activity_study_result.xml
@@ -7,14 +7,25 @@
     android:orientation="vertical"
     tools:context="animalize.github.com.quantangshi.StudyResultActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/browser_toolbar"
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:contentInsetStartWithNavigation="0dp"
-        app:theme="@style/ToolbarColoredBackArrow"
-        app:titleTextColor="@android:color/white" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ToolbarColoredBackArrow">
+
+        <TextView
+            android:id="@+id/title_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:lines="1"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/ratio_panel"
