--- a/app/src/main/res/layout/activity_tip.xml
+++ b/app/src/main/res/layout/activity_tip.xml
@@ -24,6 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:fadeScrollbars="false"
+            android:scrollbars="vertical"
             android:textSize="18sp" />
     </ScrollView>
 </LinearLayout>
