--- a/app/src/main/res/layout/activity_tip.xml
+++ b/app/src/main/res/layout/activity_tip.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:title="使用帮助"
+        app:contentInsetStartWithNavigation="0dp"
+        app:theme="@style/ToolbarColoredBackArrow"
         app:titleTextColor="@android:color/white" />
 
     <ScrollView
