--- a/app/src/main/res/layout/activity_tag_search.xml
+++ b/app/src/main/res/layout/activity_tag_search.xml
@@ -67,7 +67,7 @@
             <!-- 所有tag -->
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <co.lujun.androidtagview.TagContainerLayout
                     android:id="@+id/all_tags"
