--- a/app/src/main/res/layout/activity_option.xml
+++ b/app/src/main/res/layout/activity_option.xml
@@ -128,6 +128,18 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="invisible" />
+
+        <CheckBox
+            android:id="@+id/keep_screen_on"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="诗界面屏幕常亮" />
     </LinearLayout>
 
     <ScrollView
