--- a/app/src/main/res/layout/panel_drag.xml
+++ b/app/src/main/res/layout/panel_drag.xml
@@ -56,6 +56,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <Button
