--- a/app/src/main/res/layout/activity_study_result.xml
+++ b/app/src/main/res/layout/activity_study_result.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="animalize.github.com.quantangshi.StudyResultActivity">
 
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
             android:lines="1"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/ratio_panel"
