--- a/app/src/main/res/layout/activity_tag_manage.xml
+++ b/app/src/main/res/layout/activity_tag_manage.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="animalize.github.com.quantangshi.TagManageActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/tag_manage_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
