--- a/app/src/main/res/layout/activity_tip.xml
+++ b/app/src/main/res/layout/activity_tip.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="animalize.github.com.quantangshi.AboutActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/tip_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
