--- a/app/src/main/res/layout/view_neighbour.xml
+++ b/app/src/main/res/layout/view_neighbour.xml
@@ -12,7 +12,7 @@
         android:text="邻近80首"
         android:textSize="20sp" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/neighbour_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
