--- a/app/src/main/res/layout/view_recent.xml
+++ b/app/src/main/res/layout/view_recent.xml
@@ -12,7 +12,7 @@
         android:text="最近60首"
         android:textSize="20sp" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recent_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
